# dbskill

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  server.example.yaml
api/: __init__.py  auth.py  main.py
api/admin/: __init__.py  auth.py  routes.py
api/admin/templates/: admin_account_edit.html  admin_accounts.html  admin_api_key_databases.html  admin_api_key_detail.html  admin_api_key_edit.html  admin_api_key_new.html  admin_api_keys.html  admin_audit_logs.html  admin_change_password.html  admin_dashboard.html  admin_database_detail.html  admin_database_edit.html  admin_database_new.html  admin_databases.html  admin_login.html  base.html
api/routes/: __init__.py  databases.py  execute.py  query.py  schema.py
api/services/: __init__.py  audit.py  backend_db.py  config.py  logging_config.py  models.py
dbskill/: SKILL.md  api_client.py  config.example.yaml  constants.py  requirements.txt  utils.py
dbskill/scripts/: execute.py  query.py  schema.py
scripts/: docker-run.sh  run-local.sh
